--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "joi": "^17.11.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "path": "^0.12.7",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
